Fri Feb  4 01:25:05 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/IIOP_Endpoint.h:
	* tao/Object.h:
	* tao/Profile.h:
	* tao/Profile_Transport_Resolver.h:
	* tao/params.h:

	  Optimized class/struct attribute declaration order to reduce
	  alignment padding, hence the overall size of the class/struct.

	* tao/IIOP_Endpoint.cpp:
	* tao/Object.cpp:
	* tao/Object.i:
	* tao/Profile.cpp:
	* tao/Profile_Transport_Resolver.inl:
	* tao/params.cpp:

	  Updated order of attributes in constructor base member
	  initializer lists accordingly.

Thu Feb  3 19:27:58 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Messaging/Asynch_Reply_Dispatcher.cpp (reply_timed_out):

	  A slightly modified fix for [BUGID2038]. Once Torsten confirms
	  this works, I will close the bugzilla entry.

Thu Feb  3 19:14:17 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* tao/Messaging/Asynch_Reply_Dispatcher.cpp:

	  Reverted this patch "Thu Jan 27 20:01:21 2005  Balachandran
	  Natarajan  <bala@dre.vanderbilt.edu>"

Wed Feb  2 22:17:49 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp:
        * TAO_IDL/be/be_visitor_array/array_cs.cpp:
        * TAO_IDL/be/be_visitor_array/cdr_op_cs.cpp:

          Changed C-style casts in generated code for arrays
          to c++-style casts. Thanks again to Johhny Willemsen
          <jwillemsen@remedy.nl> for digging these up.

Wed Feb  2 20:25:18 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp:
        * TAO_IDL/be_include/be_visitor_arg_traits.h:

          Added visit_attribute() method, which tales action
          only if the attribute type is an unaliased bounded (w)string.
          Thanks to Gary Maxey <gary.maxey@hp.com> for sending in
          the example IDL file that showed that the arg_traits
          visitor was not handling this case.

        * tests/IDL_Test/interface.idl:
